--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ethannguyens/e2e#readme",
   "devDependencies": {
+    "eslint": "^3.16.1",
     "jasmine": "^2.5.3",
     "selenium-standalone": "^6.0.1",
     "webdriverio": "^4.6.2"
