--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "e2e test using selenium, webdriverio, appium and jasmine",
   "main": "index.js",
   "scripts": {
-    "test": "npm t"
+    "test": "npm t",
+    "selenium": "selenium-standalone install && selenium-standalone start"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "eslint": "^3.16.1",
     "jasmine": "^2.5.3",
     "selenium-standalone": "^6.0.1",
+    "wdio-jasmine-framework": "^0.2.19",
     "webdriverio": "^4.6.2"
   }
 }
