--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm t",
-    "selenium": "selenium-standalone install && selenium-standalone start"
+    "selenium": "selenium-standalone install && selenium-standalone start -- -role hub",
+    "selenium-hub": "selenium-standalone install && selenium-standalone start — -role node -hub http://localhost:4444/grid/register -browser “browserName=chrome,maxInstances=5”"
   },
   "repository": {
     "type": "git",
