--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm t",
     "selenium": "selenium-standalone install && selenium-standalone start -- -role hub",
-    "selenium-hub": "selenium-standalone install && selenium-standalone start — -role node -hub http://localhost:4444/grid/register -browser “browserName=chrome,maxInstances=5”"
+    "selenium-hub": "selenium-standalone start — -role node -hub http://localhost:4444/grid/register -browser “browserName=chrome,maxInstances=5”"
   },
   "repository": {
     "type": "git",
